set vessel detection processing

--- a/src/main/app-resources/notebook/libexec/input.ipynb
+++ b/src/main/app-resources/notebook/libexec/input.ipynb
@@ -193,9 +193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Input identifier**\n",
-    "\n",
-    "This is the Sentinel-2 product identifier"
+    "**Input identifier**"
    ]
   },
   {
@@ -206,16 +204,14 @@
    },
    "outputs": [],
    "source": [
-    "input_identifier = 'S1B_IW_GRDH_1SDH_20171025T204653_20171025T204718_007991_00E1E2_CBD2'"
+    "input_identifier = 'S1B_IW_GRDH_1SDV_20170703T194823_20170703T194848_006328_00B202_5554'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Input reference**\n",
-    "\n",
-    "This is the Sentinel-2 catalogue reference"
+    "**Input reference**"
    ]
   },
   {
@@ -226,7 +222,7 @@
    },
    "outputs": [],
    "source": [
-    "input_reference = 'https://catalog.terradue.com/sentinel1/search?uid=S1B_IW_GRDH_1SDH_20171025T204653_20171025T204718_007991_00E1E2_CBD2'"
+    "input_reference = 'https://catalog.terradue.com/sentinel1/search?uid=S1B_IW_GRDH_1SDV_20170703T194823_20170703T194848_006328_00B202_5554'"
    ]
   },
   {
@@ -246,7 +242,7 @@
    },
    "outputs": [],
    "source": [
-    "data_path = '/workspace/data'"
+    "data_path = '/workspace/data/S-1'"
    ]
   },
   {
@@ -303,18 +299,15 @@
    },
    "outputs": [],
    "source": [
-    "def oil_detection_processing(**kwargs):\n",
+    "def vessel_detection_processing(**kwargs):\n",
     "   \n",
     "    options = dict()\n",
     "    \n",
     "    operators = ['Read',\n",
-    "                 'Subset',\n",
-    "                 'Calibration',\n",
-    "                 'Speckle-Filter',\n",
-    "                 'Import-Vector',\n",
     "                 'Land-Sea-Mask',\n",
-    "                 'Oil-Spill-Detection',\n",
-    "                 'Oil-Spill-Clustering',\n",
+    "                 'Calibration',\n",
+    "                 'AdaptiveThresholding',\n",
+    "                 'Object-Discrimination',\n",
     "                 'Write']\n",
     "    \n",
     "    for operator in operators:\n",
@@ -499,6 +492,7 @@
     "s1meta = \"manifest.safe\"\n",
     "\n",
     "\n",
+    "input_identifiers = [input_identifier]\n",
     "\n",
     "for s1path in input_identifiers:\n",
     "\n",
@@ -516,14 +510,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subset = dict()\n",
+    "landseamask = get_operator_default_parameters('Land-Sea-Mask')\n",
     "\n",
-    "aoi = regionOfInterest['value']\n",
+    "for p in landseamask:\n",
+    "    if p == 'shorelineExtension':\n",
+    "        LandSeaMask[p] = '10'\n",
     "\n",
-    "subset['copyMetadata'] = 'true'\n",
-    "#subset['geoRegion'] = 'POLYGON ((-54.3452413212612 69.74156437889997, -51.65178350038967 69.98563658328254, -52.514956886601865 71.11255404659198, -55.35237767944321 70.857913012771, -54.3452413212612 69.74156437889997))'\n",
-    "subset['geoRegion'] = regionOfInterest['value']\n",
-    "subset"
+    "landseamask"
    ]
   },
   {
@@ -532,10 +525,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "calibration = dict()\n",
+    "calibration = get_operator_default_parameters('Calibration')\n",
     "\n",
-    "calibration['auxFile'] = 'Latest Auxiliary File'\n",
-    "calibration['outputSigmaBand'] = 'true'"
+    "#for p in LandSeaMask:\n",
+    "#    if p == 'shorelineExtension':\n",
+    "#        LandSeaMask[p] = '10'\n",
+    "\n",
+    "calibration"
    ]
   },
   {
@@ -544,19 +540,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "specklefilter = dict()\n",
+    "adaptivethresholding = get_operator_default_parameters('AdaptiveThresholding')\n",
     "\n",
-    "specklefilter['filter'] = 'Lee'\n",
-    "specklefilter['filterSizeX'] = '3'\n",
-    "specklefilter['filterSizeY'] = '3'\n",
-    "specklefilter['dampingFactor'] = '2'\n",
-    "specklefilter['estimateENL'] = 'true'\n",
-    "specklefilter['enl'] = '1.0'\n",
-    "specklefilter['numLooksStr'] = '1'\n",
-    "specklefilter['windowSize'] = '7x7'\n",
-    "specklefilter['targetWindowSizeStr'] = '3x3'\n",
-    "specklefilter['sigmaStr'] = '0.9'\n",
-    "specklefilter['anSize'] = '50'"
+    "for p in adaptivethresholding:\n",
+    "    if p == 'pfa':\n",
+    "        adaptivethresholding[p] = '12.5'\n",
+    "\n",
+    "adaptivethresholding"
    ]
   },
   {
@@ -565,66 +555,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "importvector = dict()\n",
+    "objectdiscrimination = get_operator_default_parameters('Object-Discrimination')\n",
     "\n",
-    "shp_rel_path = 'land_vector/land.shp'\n",
+    "for p in objectdiscrimination:\n",
+    "    if p == 'minTargetSizeInMeter':\n",
+    "        objectdiscrimination[p] = '30'\n",
     "\n",
-    "shp_path = '/'.join(['/application/notebook/libexec', shp_rel_path])\n",
-    "\n",
-    "if os.path.isfile(shp_path):\n",
-    "    pass\n",
-    "else:\n",
-    "    shp_path = '/'.join([os.getcwd(), shp_rel_path])\n",
-    "    \n",
-    "\n",
-    "importvector['vectorFile'] = shp_path\n",
-    "importvector['separateShapes'] = 'false'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "landseamask = dict()\n",
-    "\n",
-    "landseamask['landMask'] = 'false'\n",
-    "landseamask['useSRTM'] = 'false'\n",
-    "landseamask['geometry'] = 'land'\n",
-    "landseamask['invertGeometry'] = 'true'\n",
-    "landseamask['shorelineExtension'] = '10'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "oilspilldetection = dict()\n",
-    "\n",
-    "\n",
-    "var1 = backgroundWindowSize['value']\n",
-    "var2 = thresholdShift['value']\n",
-    "\n",
-    "#oilspilldetection['sourceBands'] = 'Sigma0_HH,Sigma0_HV'\n",
-    "oilspilldetection['sourceBands'] = 'Sigma0_HH'\n",
-    "oilspilldetection['backgroundWindowSize'] = var1\n",
-    "oilspilldetection['k'] = var2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "oilspillclustering = dict()\n",
-    "\n",
-    "var1 = minClusterSizeInKm2['value']\n",
-    "\n",
-    "oilspillclustering['minClusterSizeInKm2'] = var1"
+    "objectdiscrimination"
    ]
   },
   {
@@ -637,8 +574,16 @@
     "\n",
     "output_path = os.path.join(temp_folder, 'temp')\n",
     "\n",
-    "write['file'] = output_path"
+    "write['file'] = output_path\n",
+    "write"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -655,16 +600,27 @@
    },
    "outputs": [],
    "source": [
-    "oil_detection_processing(Read=read,\n",
-    "                         Subset=subset,\n",
-    "                         Calibration=calibration,\n",
-    "                         Speckle_Filter=specklefilter,\n",
-    "                         Import_Vector=importvector,\n",
-    "                         Land_Sea_Mask=landseamask,\n",
-    "                         Oil_Spill_Detection=oilspilldetection,\n",
-    "                         Oil_Spill_Clustering=oilspillclustering,\n",
-    "                         Write=write)"
+    "vessel_detection_processing(Read=read,\n",
+    "                            Land_Sea_Mask=landseamask,\n",
+    "                            Calibration=calibration,\n",
+    "                            AdaptiveThresholding=adaptivethresholding,\n",
+    "                            Object_Discrimination=objectdiscrimination,\n",
+    "                            Write=write)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -677,7 +633,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Detected oil sheen"
+    "##### Detected vessels"
    ]
   },
   {
