--- a/src/main/app-resources/notebook/libexec/input.ipynb
+++ b/src/main/app-resources/notebook/libexec/input.ipynb
@@ -11,61 +11,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### <a name=\"quicklink\">Quick link"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* [Objective](#objective)\n",
-    "* [Data](#data)\n",
-    "* [Service Definition](#service)\n",
-    "* [Parameter Definition](#parameter)\n",
-    "* [Runtime Parameter Definition](#runtime)\n",
-    "* [Workflow](#workflow)\n",
-    "* [License](#license)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### <a name=\"objective\">Objective "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### <a name=\"data\">Data "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### <a name=\"service\">Service Definition"
    ]
   },
@@ -93,9 +38,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Background Window Size**\n",
+    "**Adaptive Thresholding**\n",
     "\n",
-    "Background Window Size: The window size in pixels for computing local mean backscatter level."
+    "Adaptive Thresholding: Extend the shoreline by this many pixels (Land-Sea-Mask)."
    ]
   },
   {
@@ -106,10 +51,58 @@
    },
    "outputs": [],
    "source": [
-    "backgroundWindowSize = dict([('id', 'backgroundWindowSize'),\n",
-    "                             ('value', '181'),\n",
-    "                             ('title', 'Background Window Size'),\n",
-    "                             ('abstract', 'Background Window Size: The window size in pixels for computing local mean backscatter level.'),\n",
+    "shorelineExtension = dict([('id', 'shorelineExtension'),\n",
+    "                           ('value', '10'),\n",
+    "                           ('title', 'Shoreline Extension'),\n",
+    "                           ('abstract', 'Shoreline Extension: Extend the shoreline by this many pixels (Land-Sea-Mask)'),\n",
+    "                           ('minOccurs', '1')])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Probability of false alarm**\n",
+    "\n",
+    "Probability of false alarm: The PFA value is computed by 10^(-x). where x is the given positive number (Adaptive Threshold Algorithm)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pfa = dict([('id', 'pfa'),\n",
+    "            ('value', '12.5'),\n",
+    "            ('title', 'Probability of false alarm'),\n",
+    "            ('abstract', 'Probability of false alarm: The PFA value is computed by 10^(-x). where x is the given positive number (Adaptive Threshold Algorithm)'),\n",
+    "            ('minOccurs', '1')])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Minimum Target Size (m)**\n",
+    "\n",
+    "Minimum Target Size (m): Target with dimension smaller than this threshold is eliminated (Object-Discrimination)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "minTargetSizeInMeter = dict([('id', 'minTargetSizeInMeter'),\n",
+    "                             ('value', '30.0'),\n",
+    "                             ('title', 'Minimum Target Size'),\n",
+    "                             ('abstract', 'Minimum Target Size (m): Target with dimension smaller than this threshold is eliminated (Object-Discrimination).'),\n",
     "                             ('minOccurs', '1')])"
    ]
   },
@@ -117,9 +110,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Threshold Shift**\n",
+    "**Maximum Target Size (m)**\n",
     "\n",
-    "Threshold Shift (dB): The detecting threshold is lower than the local mean backscatter level by this amount."
+    "Maximum Target Size (m): Target with dimension larger than this threshold is eliminated (Object-Discrimination)."
    ]
   },
   {
@@ -130,56 +123,11 @@
    },
    "outputs": [],
    "source": [
-    "thresholdShift = dict([('id', 'thresholdShift'),\n",
-    "                       ('value', '2.0'),\n",
-    "                       ('title', 'Threshold Shift'),\n",
-    "                       ('abstract', 'Threshold Shift (dB): The detecting threshold is lower than the local mean backscatter level by this amount.'),\n",
-    "                       ('minOccurs', '1')])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Minimum Cluster Size**\n",
-    "\n",
-    "The minimum cluster size in square kilometer. Cluster with size smaller than this size is eliminated."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "minClusterSizeInKm2 = dict([('id', 'minClusterSizeInKm2'),\n",
-    "                            ('value', '0.1'),\n",
-    "                            ('title', 'Minimum Cluster Size'),\n",
-    "                            ('abstract', 'The minimum cluster size in square kilometer. Cluster with size smaller than this size is eliminated.'),\n",
-    "                            ('minOccurs', '1')])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Region Of Interest**\n",
-    "\n",
-    "WKT Polygon for the Region of Interest"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "regionOfInterest = dict([('id', 'regionOfInterest'),\n",
-    "                         ('value', 'POLYGON ((-54.3452413212612 69.74156437889997, -51.65178350038967 69.98563658328254, -52.514956886601865 71.11255404659198, -55.35237767944321 70.857913012771, -54.3452413212612 69.74156437889997))'),\n",
-    "                         ('title', 'WKT Polygon for the Region of Interest'),\n",
-    "                         ('abstract', 'Set the value of WKT Polygon')])"
+    "maxTargetSizeInMeter = dict([('id', 'maxTargetSizeInMeter'),\n",
+    "                             ('value', '600.0'),\n",
+    "                             ('title', 'Maximum Target Size (m)'),\n",
+    "                             ('abstract', 'Maximum Target Size (m): Target with dimension larger than this threshold is eliminated (Object-Discrimination).'),\n",
+    "                             ('minOccurs', '1')])"
    ]
   },
   {
@@ -339,106 +287,7 @@
     "    \n",
     "    mygraph.view_graph()\n",
     "    \n",
-    "    mygraph.run()\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "def ellipsoid_correction_processing(**kwargs):\n",
-    "   \n",
-    "    options = dict()\n",
-    "    \n",
-    "    operators = ['Read',\n",
-    "                 'Ellipsoid-Correction-RD',\n",
-    "                 'Write']\n",
-    "    \n",
-    "    for operator in operators:\n",
-    "            \n",
-    "        print 'Getting default values for Operator {}'.format(operator)\n",
-    "        parameters = get_operator_default_parameters(operator)\n",
-    "        \n",
-    "        options[operator] = parameters\n",
-    "\n",
-    "    for key, value in kwargs.items():\n",
-    "        \n",
-    "        print 'Updating Operator {}'.format(key)\n",
-    "        options[key.replace('_', '-')].update(value)\n",
-    "    \n",
-    "    mygraph = GraphProcessor()\n",
-    "    \n",
-    "    for index, operator in enumerate(operators):\n",
-    "    \n",
-    "        print 'Adding Operator {} to graph'.format(operator)\n",
-    "        if index == 0:            \n",
-    "            source_node_id = ''\n",
-    "        \n",
-    "        else:\n",
-    "            source_node_id = operators[index - 1]\n",
-    "        \n",
-    "        mygraph.add_node(operator,\n",
-    "                         operator, \n",
-    "                         options[operator], source_node_id)\n",
-    "    \n",
-    "    mygraph.view_graph()\n",
-    "    \n",
-    "    mygraph.run()\n",
-    "    \n",
-    "    \n",
-    "def write_output_image(filepath, output_matrix, image_format, data_format, mask=None, output_projection=None, output_geotransform=None, no_data_value=None):\n",
-    "    \n",
-    "    driver = gdal.GetDriverByName(image_format)\n",
-    "    out_rows = np.size(output_matrix, 0)\n",
-    "    out_columns = np.size(output_matrix, 1)\n",
-    "    \n",
-    "    \n",
-    "    if mask is not None and mask is not 0:\n",
-    "        # TODO: check if output folder exists\n",
-    "        output = driver.Create(filepath, out_columns, out_rows, 2, data_format)\n",
-    "        mask_band = output.GetRasterBand(2)\n",
-    "        mask_band.WriteArray(mask)\n",
-    "        if no_data_value is not None:\n",
-    "            output_matrix[mask > 0] = no_data_value\n",
-    "    else:\n",
-    "        output = driver.Create(filepath, out_columns, out_rows, 1, data_format)\n",
-    "    \n",
-    "    if output_projection is not None:\n",
-    "        output.SetProjection(output_projection)\n",
-    "    if output_geotransform is not None:\n",
-    "        output.SetGeoTransform(output_geotransform)\n",
-    "    \n",
-    "    raster_band = output.GetRasterBand(1)\n",
-    "    if no_data_value is not None:\n",
-    "        raster_band.SetNoDataValue(no_data_value)\n",
-    "       \n",
-    "    # change color of detected pixels to red\n",
-    "    ct = gdal.ColorTable()\n",
-    "    ct.SetColorEntry(1, (255,0,0,255))\n",
-    "    raster_band.SetColorTable(ct)\n",
-    "        \n",
-    "    raster_band.WriteArray(output_matrix)\n",
-    "    \n",
-    "    gdal.Warp(filepath, output, format=\"GTiff\", outputBoundsSRS='EPSG:4326', xRes=output_geotransform[1], yRes=-output_geotransform[5], targetAlignedPixels=True)\n",
-    "    \n",
-    "def get_formatted_date(datetime_str):\n",
-    "    date = datetime.datetime.strftime(datetime_str, '%Y-%m-%dT%H:%M:%SZ')\n",
-    "    return date\n",
-    "\n",
-    "\n",
-    "def write_properties_file(output_name, first_date, last_date, region_of_interest):\n",
-    "    \n",
-    "    title = 'Output %s' % output_name\n",
-    "    \n",
-    "    first_date = datetime.datetime(year=first_date.year, month=first_date.month, day=first_date.day)\n",
-    "    first_date = first_date + datetime.timedelta(days=0, hours=0, minutes=0, seconds=0)\n",
-    "    first_date = get_formatted_date(first_date)\n",
-    "    \n",
-    "    last_date = datetime.datetime(year=last_date.year, month=last_date.month, day=last_date.day)\n",
-    "    last_date = last_date + datetime.timedelta(days=0, hours=23, minutes=59, seconds=59)\n",
-    "    last_date = get_formatted_date(last_date)\n",
-    "\n",
-    "    with open(output_name + '.properties', 'wb') as file:\n",
-    "        file.write('title=%s\\n' % title)\n",
-    "        file.write('date=%s/%s\\n' % (first_date, last_date))\n",
-    "        file.write('geometry=%s' % (region_of_interest))"
+    "    mygraph.run()"
    ]
   },
   {
@@ -514,7 +363,7 @@
     "\n",
     "for p in landseamask:\n",
     "    if p == 'shorelineExtension':\n",
-    "        LandSeaMask[p] = '10'\n",
+    "        landseamask[p] = shorelineExtension['value']\n",
     "\n",
     "landseamask"
    ]
@@ -544,7 +393,7 @@
     "\n",
     "for p in adaptivethresholding:\n",
     "    if p == 'pfa':\n",
-    "        adaptivethresholding[p] = '12.5'\n",
+    "        adaptivethresholding[p] = pfa['value']\n",
     "\n",
     "adaptivethresholding"
    ]
@@ -559,7 +408,9 @@
     "\n",
     "for p in objectdiscrimination:\n",
     "    if p == 'minTargetSizeInMeter':\n",
-    "        objectdiscrimination[p] = '30'\n",
+    "        objectdiscrimination[p] = minTargetSizeInMeter['value']\n",
+    "    elif p == 'maxTargetSizeInMeter':\n",
+    "        objectdiscrimination[p] = maxTargetSizeInMeter['value']\n",
     "\n",
     "objectdiscrimination"
    ]
@@ -626,7 +477,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Conversion to WGS84"
+    "#### Conversion to Shapefile"
    ]
   },
   {
@@ -641,217 +492,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "read = dict()\n",
-    "\n",
-    "read['file'] =  output_path + '.dim'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ellipsoidcorrectionrd = dict()\n",
-    "\n",
-    "\n",
-    "ellipsoidcorrectionrd['sourceBands'] = 'Sigma0_HH_oil_spill_bit_msk'\n",
-    "ellipsoidcorrectionrd['sourceBandNames'] = 'Sigma0_HH_oil_spill_bit_msk'\n",
-    "\n",
-    "#ellipsoidcorrectionrd['sourceBands'] = 'Sigma0_HH'\n",
-    "#ellipsoidcorrectionrd['sourceBandNames'] = 'Sigma0_HH'\n",
-    "\n",
-    "ellipsoidcorrectionrd['demName'] = 'GETASSE30'\n",
-    "ellipsoidcorrectionrd['imgResamplingMethod'] = 'BILINEAR_INTERPOLATION'\n",
-    "\n",
-    "proj = '''GEOGCS[\"WGS84(DD)\", DATUM[\"WGS84\", SPHEROID[\"WGS84\", 6378137.0, 298.257223563]], PRIMEM[\"Greenwich\", 0.0], UNIT[\"degree\", 0.017453292519943295], AXIS[\"Geodetic longitude\", EAST], AXIS[\"Geodetic latitude\", NORTH]]'''\n",
-    "\n",
-    "ellipsoidcorrectionrd['mapProjection'] = proj       # comment this line if no need to convert to UTM/WGS84, default is WGS84\n",
-    "ellipsoidcorrectionrd['saveSelectedSourceBand'] = 'true'\n",
-    "\n",
-    "ellipsoidcorrectionrd['nodataValueAtSea'] = 'false'\n",
-    "\n",
-    "ellipsoidcorrectionrd['pixelSpacingInMeter'] = '25.0'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "write = dict()\n",
-    "\n",
-    "output_path2 = os.path.join(temp_folder, 'temp2.tif')\n",
-    "\n",
-    "write['file'] = output_path2\n",
-    "write['formatName'] = 'GeoTIFF'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ellipsoid_correction_processing(Read=read,\n",
-    "                                Ellipsoid_Correction_RD=ellipsoidcorrectionrd,\n",
-    "                                Write=write)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#output_path2 = 'temp2.tif'\n",
-    "\n",
-    "dataset = gdal.Open(output_path2)\n",
-    "\n",
-    "product_array = dataset.GetRasterBand(1).ReadAsArray()\n",
-    "projection = dataset.GetProjection()\n",
-    "geotransform = dataset.GetGeoTransform()\n",
-    "no_data_value = dataset.GetRasterBand(1).GetNoDataValue()\n",
-    "data_type = dataset.GetRasterBand(1).DataType"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_path2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# date in str\n",
-    "date_str = input_identifiers[0].split('_')[4].split('T')[0]\n",
-    "\n",
-    "# date in datetime\n",
-    "dt = datetime.datetime.strptime(date_str, \"%Y%m%d\")\n",
-    "\n",
-    "# output file path\n",
-    "output_tiff_path = os.path.join(output_folder, 'oil_sheen_bit_S1_HH_' + date_str + '.tif')\n",
-    "\n",
-    "# writes final tiff image\n",
-    "write_output_image(output_tiff_path, product_array, 'GTiff', 1, mask=None, output_projection=projection, output_geotransform=geotransform, no_data_value=0)\n",
-    "\n",
-    "# writes properties file\n",
-    "write_properties_file(output_tiff_path, dt, dt, aoi)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### SAR image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "read = dict()\n",
-    "\n",
-    "read['file'] =  output_path + '.dim'\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ellipsoidcorrectionrd = dict()\n",
-    "\n",
-    "\n",
-    "#ellipsoidcorrectionrd['sourceBands'] = 'Sigma0_HH_oil_spill_bit_msk'\n",
-    "#ellipsoidcorrectionrd['sourceBandNames'] = 'Sigma0_HH_oil_spill_bit_msk'\n",
-    "\n",
-    "ellipsoidcorrectionrd['sourceBands'] = 'Sigma0_HH'\n",
-    "ellipsoidcorrectionrd['sourceBandNames'] = 'Sigma0_HH'\n",
-    "\n",
-    "ellipsoidcorrectionrd['demName'] = 'GETASSE30'\n",
-    "ellipsoidcorrectionrd['imgResamplingMethod'] = 'BILINEAR_INTERPOLATION'\n",
-    "\n",
-    "proj = '''GEOGCS[\"WGS84(DD)\", DATUM[\"WGS84\", SPHEROID[\"WGS84\", 6378137.0, 298.257223563]], PRIMEM[\"Greenwich\", 0.0], UNIT[\"degree\", 0.017453292519943295], AXIS[\"Geodetic longitude\", EAST], AXIS[\"Geodetic latitude\", NORTH]]'''\n",
-    "\n",
-    "ellipsoidcorrectionrd['mapProjection'] = proj       # comment this line if no need to convert to UTM/WGS84, default is WGS84\n",
-    "ellipsoidcorrectionrd['saveSelectedSourceBand'] = 'true'\n",
-    "\n",
-    "ellipsoidcorrectionrd['nodataValueAtSea'] = 'false'\n",
-    "\n",
-    "ellipsoidcorrectionrd['pixelSpacingInMeter'] = '25.0'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "write = dict()\n",
-    "\n",
-    "\n",
-    "#output_path2 = os.path.join(output_folder, 'Sigma0_HH_' + date_str + '.tif')\n",
-    "output_path2 = os.path.join(temp_folder, 'Sigma0_HH_' + date_str + '.tif')\n",
-    "\n",
-    "write['file'] = output_path2\n",
-    "write['formatName'] = 'GeoTIFF'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ellipsoid_correction_processing(Read=read,\n",
-    "                                Ellipsoid_Correction_RD=ellipsoidcorrectionrd,\n",
-    "                                Write=write)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# output file path\n",
-    "output_tiff_path2 = os.path.join(output_folder, 'Sigma0_HH_' + date_str + '.tif')\n",
-    "\n",
-    "ds = gdal.Open(output_path2)\n",
-    "\n",
-    "product_array = ds.GetRasterBand(1).ReadAsArray()\n",
-    "\n",
-    "vmin = np.percentile(product_array[product_array > 0], 5)\n",
-    "vmax = np.percentile(product_array[product_array > 0], 95)\n",
-    "\n",
-    "scaleParams = [[vmin, vmax, 0, 255]]\n",
-    "\n",
-    "ds = gdal.Translate(output_tiff_path2, ds, outputType = gdal.GDT_Byte, scaleParams=scaleParams)\n",
-    "ds = None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# writes properties file\n",
-    "write_properties_file(output_tiff_path2, dt, dt, aoi)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
