change mvn archetype

--- a/src/main/app-resources/notebook/libexec/input.ipynb
+++ b/src/main/app-resources/notebook/libexec/input.ipynb
@@ -141,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Input identifier**"
+    "**Input identifiers**"
    ]
   },
   {
@@ -152,14 +152,14 @@
    },
    "outputs": [],
    "source": [
-    "input_identifier = 'S1B_IW_GRDH_1SDV_20170703T194823_20170703T194848_006328_00B202_5554'"
+    "input_identifiers = ['S1B_IW_GRDH_1SDV_20170703T194823_20170703T194848_006328_00B202_5554']"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Input reference**"
+    "**Input references**"
    ]
   },
   {
@@ -170,7 +170,7 @@
    },
    "outputs": [],
    "source": [
-    "input_reference = 'https://catalog.terradue.com/sentinel1/search?uid=S1B_IW_GRDH_1SDV_20170703T194823_20170703T194848_006328_00B202_5554'"
+    "input_references = ['https://catalog.terradue.com/sentinel1/search?uid=S1B_IW_GRDH_1SDV_20170703T194823_20170703T194848_006328_00B202_5554']"
    ]
   },
   {
@@ -340,9 +340,6 @@
     "\n",
     "s1meta = \"manifest.safe\"\n",
     "\n",
-    "\n",
-    "input_identifiers = [input_identifier]\n",
-    "\n",
     "for s1path in input_identifiers:\n",
     "\n",
     "    s1prd = \"%s/%s/%s.SAFE/%s\" % (data_path, s1path, s1path, s1meta)\n",
@@ -458,13 +455,6 @@
     "                            Object_Discrimination=objectdiscrimination,\n",
     "                            Write=write)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
