add loop to process all S-1 products

--- a/src/main/app-resources/notebook/libexec/input.ipynb
+++ b/src/main/app-resources/notebook/libexec/input.ipynb
@@ -336,18 +336,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "read = dict()\n",
-    "\n",
-    "s1meta = \"manifest.safe\"\n",
-    "\n",
+    "reads = []\n",
     "for s1path in input_identifiers:\n",
+    "    \n",
+    "    read = dict()\n",
     "\n",
+    "    s1meta = \"manifest.safe\"\n",
+    "    \n",
     "    s1prd = \"%s/%s/%s.SAFE/%s\" % (data_path, s1path, s1path, s1meta)\n",
-    "\n",
-    "read['file'] =  s1prd\n",
-    "#read['formatName'] = 'Sen3_SLSTRL1B_500m'\n",
-    "\n",
-    "read"
+    "    \n",
+    "    read['file'] =  s1prd\n",
+    "    #read['formatName'] = 'Sen3_SLSTRL1B_500m'\n",
+    "    \n",
+    "    reads.append(read)\n",
+    "    \n"
    ]
   },
   {
@@ -417,21 +419,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "write = dict()\n",
-    "\n",
-    "output_path = os.path.join(temp_folder, 'temp')\n",
-    "\n",
-    "write['file'] = output_path\n",
-    "write"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "writes = []\n",
+    "for s1path in input_identifiers:\n",
+    "    \n",
+    "    write = dict()\n",
+    "    \n",
+    "    output_path = os.path.join(temp_folder, s1path + '_temp')\n",
+    "    \n",
+    "    write['file'] = output_path\n",
+    "\n",
+    "    writes.append(write)\n",
+    "writes"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -448,12 +455,14 @@
    },
    "outputs": [],
    "source": [
-    "vessel_detection_processing(Read=read,\n",
-    "                            Land_Sea_Mask=landseamask,\n",
-    "                            Calibration=calibration,\n",
-    "                            AdaptiveThresholding=adaptivethresholding,\n",
-    "                            Object_Discrimination=objectdiscrimination,\n",
-    "                            Write=write)"
+    "for r,w in zip(reads,writes):\n",
+    "    \n",
+    "    vessel_detection_processing(Read=r,\n",
+    "                                Land_Sea_Mask=landseamask,\n",
+    "                                Calibration=calibration,\n",
+    "                                AdaptiveThresholding=adaptivethresholding,\n",
+    "                                Object_Discrimination=objectdiscrimination,\n",
+    "                                Write=w\n"
    ]
   },
   {
