--- a/src/main/app-resources/notebook/libexec/input.ipynb
+++ b/src/main/app-resources/notebook/libexec/input.ipynb
@@ -229,7 +229,12 @@
     "\n",
     "import datetime\n",
     "\n",
-    "import shutil"
+    "import shutil\n",
+    "\n",
+    "import pandas as pd\n",
+    "import geopandas as gpd\n",
+    "\n",
+    "import shapely.wkt"
    ]
   },
   {
@@ -462,7 +467,7 @@
     "                                Calibration=calibration,\n",
     "                                AdaptiveThresholding=adaptivethresholding,\n",
     "                                Object_Discrimination=objectdiscrimination,\n",
-    "                                Write=w\n"
+    "                                Write=w)\n"
    ]
   },
   {
@@ -476,7 +481,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Conversion to Shapefile"
+    "#### AIS"
    ]
   },
   {
@@ -491,7 +496,79 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "shipdetections_path = os.path.join(writes[0]['file'] + '.data', 'vector_data', 'ShipDetections.csv')\n",
+    "shipdetections_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shipdetections_raw = pd.read_csv(shipdetections_path,sep='\\t', skiprows=[0])\n",
+    "shipdetections_raw.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Read AIS data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ais_data = '/workspace/Better_3rd_phase/Applications/EXT-03-02-01/ewf-ext-03-02-01/src/main/app-resources/notebook/etc/ais_2017_07.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import AIS data (first to DataFrame, then convert to GeoDataFrame).\n",
+    "ais_df = pd.read_csv(ais_data, decimal=\",\", usecols=['MMSI', 'IMO', 'STATUS', 'SPEED(KNOTS x10)', 'LON', 'LAT',\n",
+    "                                                     'COURSE', 'HEADING', 'TIMESTAMP(UTC)'],\n",
+    "                     dtype={'LON': float, 'LAT': float})\n",
+    "print('Number of rows in %s: %d' % (ais_data.split('\\\\')[-1], len(ais_df.index)))\n",
+    "\n",
+    "ais_gdf = gpd.GeoDataFrame(ais_df, geometry=gpd.points_from_xy(ais_df.LON, ais_df.LAT), crs=\"EPSG:4326\")\n",
+    "ais_gdf.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "AOI = shapely.wkt.loads('POLYGON ((-29.97968971227660973 39.49718800212976078, -26.71593511606884519 39.49718800212976078, -26.75288328130893234 37.42809074868483776, -29.99200576735664114 37.46503891392492847, -29.97968971227660973 39.49718800212976078))')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ais_gdf_aoi = ais_gdf[ais_gdf['geometry'].within(AOI)]\n",
+    "ais_gdf_aoi.head()"
+   ]
   },
   {
    "cell_type": "markdown",
